test/simple/correct/Lambda2.hs
module Lambda2 where

main :: Int
main = (\x -> x) 1 

