test/simple/typeerrors/Strategies/B.hs
module B where

(+++) :: Int -> Int -> Int
(+++) x y = x + y
